--- a/FuelDeliveryMVC/bin/FuelDeliveryMVC.dll.config
+++ b/FuelDeliveryMVC/bin/FuelDeliveryMVC.dll.config
@@ -15,7 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="AppDbContext" connectionString="Data Source=(local)\sqlexpress; Initial Catalog=FuelDelivery;Integrated Security=SSPI;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="FuelDelivery" 
+         connectionString="Data Source=(local)\sqlexpress; Initial Catalog=FuelDelivery;Integrated Security=SSPI;MultipleActiveResultSets=true" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
